# rational_test_app

./: Cargo.toml  LICENSE.md  Readme.md
rational/: Cargo.toml  build.rs
rational/crates/rational_impl/: Cargo.toml
rational/crates/rational_impl/src/: lib.rs
rational/crates/rational_impl_types/: Cargo.toml
rational/crates/rational_impl_types/src/: lib.rs
rational/src/: lib.rs
src/: main.rs
